--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact-info">
+            <div class="contact-box">
+                <h3>Contact Us</h3>
+                <p><strong>Phone:</strong> (646) 688-2323</p>
+                <p><strong>Address:</strong> Donation Processing Center: 230 Franklin Rd., Ste. 11-II Franklin, TN 37064</p>
+            </div>
+        </section>
+        
     </div>
 </body>
 </html>
